# apicurio-sync

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  flake.nix  shell.nix
.github/workflows/: build_nix.yml  check-pr.yml  edge-build.yml  release.yml
samples/: .gitignore  apicurio-sync.yaml
samples/proto/example/: push.proto
src/: config.rs  context.rs  error.rs  lockfile.rs  main.rs  plan.rs  provider.rs  sync.rs
src/auth/: basic.rs  mod.rs  oidc.rs
src/client/: mod.rs  v2.rs
