[package]
name = "apicurio-sync"
version = "0.1.0"
authors = ["Matteo Joliveau <matteojoliveau@gmail.com>"]
edition = "2018"

[dependencies]
structopt = "0.3.21"
clap = "2.33.3"
reqwest = { version = "0.11.3", features = ["json", "rustls-tls"] }
tokio = { version = "1.7.1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8.17"
url = { version = "2.2.2" , features = ["serde"]}
async-trait = "0.1.50"
http = "0.2.4"
