[package]
name = "apicurio-sync"
version = "0.1.0"
authors = ["Matteo Joliveau <matteojoliveau@gmail.com>"]
edition = "2018"

[dependencies]
structopt = "0.3.21"
reqwest = { version = "0.11.3", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.7.1", features = ["fs", "macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8.17"
url = { version = "2.2.2" , features = ["serde"]}
async-trait = "0.1.50"
http = "0.2.4"
dirs = "3.0.2"
lazy_static = "1.4.0"
openidconnect = "2.1.0"
warp = "0.3.1"
open = "1"
chrono = "0.4.19"
